tests/NormalTests/paczka1/fuzzy1/16835152.err
Error in line 1: 0bDaEZzhq A477 94,2
Error in line 4: 0bDaEZzhq S9 21,3
Error in line 26: uc6aECeeu A477 44,9
Error in line 29: yceFXPx A692 91,2
Error in line 35: yceFXPx S9 97,4
Error in line 25: IAGWNNNZlnY S166 53,5
